--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link rel="stylesheet" href="spectre.min.css">
+		<link rel="stylesheet" href="spectre-exp.min.css">
+		<link rel="stylesheet" href="spectre-icons.min.css">
   </head>
 
   <body>
