--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,7 @@
+<p id="nav-link"><%= link_to 'Show', @post %> | <%= link_to 'Back', posts_path %></p>
+
 <h1>Editing Post</h1>
 
-<%= render 'form', post: @post %>
-
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div>
+	<%= render 'form', post: @post %>
+</div>
