--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,24 @@
+<p id="nav-link"><%= link_to 'Edit', edit_post_path(@post) %> | <%= link_to 'Back', posts_path %></p>
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<div>
+	<p>
+	  <strong>Title:</strong>
+	  <%= @post.title %>
+	  <%= rand(1..10).downto(1).inject(:*) %>
+	</p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+	<p>
+	  <strong>Body:</strong>
+	  <%= @post.body %>
+	</p>
 
-<p>
-  <strong>Published:</strong>
-  <%= @post.published %>
-</p>
+	<p>
+	  <strong>Published:</strong>
+	  <%= @post.published %>
+	</p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+	<%= link_to 'Edit', edit_post_path(@post) %> |
+	<%= link_to 'Back', posts_path %>
+</div>
